add HATEOAS